Important fix to common.ftl. Our visibility 'block-inline' was making the login screen disappear on Firefox!
Upgrade to GWT 1.4RC1 which is 1.4.10



git-svn-id: file:///a/svnrepos/hippo/code/trunk/HippoTest@361 b8d5060c-ad15-0410-9d10-96fc93d4f2a4

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -208,29 +208,11 @@ input.openid-identifier {
 }
 #sidebar li {
 	line-height: 2.5ex; 
-	list-style-type: none;
-	background: transparent url("../img/sidebar.png") no-repeat; 
+	list-style-type: none;	
+	background: #F2F2AA url("../img/sidebar_black_fade.png") repeat-y; 	
 	display: block; 	
 	margin-bottom: 5px;
 	padding: 5px 0px 5px 5px;
-}
-	
-#sidebar2 ul {
-	background-color: #e1e184;		
-	border: 1px solid #D8E3FD;
-	border-style: ridge;
-	margin-left: 10px;
-	padding: 0px;
-	width: 80%;
-}
-
-#sidebar2 li {
-	line-height: 2.5ex; 
-	list-style-type: none;	
-	display: block; 
-	padding-left: 5px; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
 }
 
 #content a:link { 	
